# Full-Stack-Web-Application

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users.py  002_create_tasks.py
backend/src/: config.py  database.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: auth.py  router.py  tasks.py
backend/src/models/: task.py  user.py
backend/src/schemas/: task.py  user.py
backend/src/services/: auth.py  tasks.py
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/components/tasks/: empty-state.tsx  task-form.tsx  task-item.tsx  task-list.tsx
frontend/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  textarea.tsx
frontend/types/: index.ts
history/adr/: ADR-001-full-stack-authentication-strategy.md  ADR-002-user-data-isolation-architecture.md  ADR-003-development-infrastructure-strategy.md
history/prompts/001-task-crud-auth/: 0001-task-crud-auth-spec-creation.spec.prompt.md  0002-task-crud-auth-implementation-plan.plan.prompt.md  0003-architectural-decision-records-creation.plan.prompt.md  0004-implementation-task-breakdown-generation.tasks.prompt.md
history/prompts/constitution/: 001-phase-ii-constitution-update.constitution.prompt.md
specs/001-task-crud-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-crud-auth/checklists/: requirements.md
(+5 files in other folders)
